package com.app.service.interfaces;

import com.app.model.LikedLocation;

public interface ILikedLocationService {
    public LikedLocation getLikedLocation(long id);
}